# etl_controle_de_vendas

./: LICENSE  README.md  docker-compose.yaml  init_dimensional_db.sql  notebook.ipynb  pyproject.toml  requirements.txt  script.py
init_operational_db/: 5.InsertIntoVendas.sql
